--- a/style.css
+++ b/style.css
@@ -145,9 +145,20 @@ i {
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
-.dice:last-child{
+.dice:last-of-type{
     top:278px;
 }
-
+.limit__wrapper{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.limit__content{
+    border: 1px solid orange;
+    width: 100px;
+    height: 25px;
+    margin-left: 5px;
+}
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
