--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ i {
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
+.btn-win { top: 531px;}
 
 .dice {
     position: absolute;
